--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -435,6 +435,7 @@
 
         <div class="priority-section">
             <div class="priority-header">Your Priority Expenses</div>
+             <a href="{{ url_for('input_prioritas') }}" class="see-all">See All</a>
             <div class="priority-grid">
                 <div class="priority-item">
                     <div class="priority-icon">🏠</div>
