--- a/templates/prioritas.html
+++ b/templates/prioritas.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <h2 class="text-xl font-bold mb-4">Hasil Alokasi Berdasarkan Prioritas</h2>
 
 <div class="mb-6 p-4 bg-gray-100 rounded">
